[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bls-transformer"
version = "0.2.0"
description = "An easy-to-use library to access Bureau of Labor Statistics data and transform the raw JSON into pandas DataFrames."
readme = "README.md"
authors = [{ name = "Ryan Sherby", email = "ryan.m.sherby@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["BLS", "data", "transformer","json","economics","timeseries","CPI","unemployment"]
dependencies = [
    "requests",
    'pandas',
    'numpy'
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/ryansherby/BLS-Transformer"
Documentation = "https://github.com/ryansherby/BLS-Transformer/wiki"